tests/NormalTests/paczka1/small_fuzzy/72792728.err
Error in line 5: i9h A104 22,8
Error in line 3: ciD S598 13,9
Error in line 13: ciD S282 45,1
